--- a/pppwngui/My Project/Settings.settings
+++ b/pppwngui/My Project/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="firmware" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="saves" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
