--- a/pppwngui/My Project/Settings.settings
+++ b/pppwngui/My Project/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="saves" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="autoretry" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
